--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ os:
 dist: trusty
 sudo: false
 language: generic
-script:
-  - for i in {1..10}; do
-      echo "===== Try #${i} ====="
-      . ./install-tex.sh
-    done
+install:
+  - . ./install-tex.sh
+#script:
+#  - for i in {1..10}; do
+#      echo "===== Try #${i} ====="
+#      . ./install-tex.sh
+#    done
